# git-rs

./: Cargo.toml  LICENSE.md  NOTES  PLAN.md  README.md  TODO.md
fixtures/: commit  delta_base  delta_expected  delta_instructions  loose_commit  loose_tree  pack_index  packfile  tree  tree_1
src/: bin.rs  commit.rs  crc.rs  delta.rs  error.rs  errors.rs  human_metadata.rs  id.rs  identity.rs  lib.rs  objects.rs  packindex.rs  reference.rs  refs.rs  repository.rs
src/objects/: blob.rs  commit.rs  mod.rs  tag.rs  tree.rs
src/pack/: any.rs  generic_read.rs  index.rs  internal_type.rs  iter.rs  mmap.rs  mod.rs  read.rs
src/stores/: fs.rs  loose.rs  mmap_pack.rs  mod.rs  pack.rs
src/walk/: commits.rs  mod.rs  tree.rs
