[package]
name = "git-rs"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"

[dependencies]
hex = "0.3.2"
error-chain = "0.12.0"
flate2 = "1.0.6"
byteorder = "1.2.7"

[lib]
name = "git_rs"
path = "src/lib.rs"

[[bin]]
name = "git_rs"
path = "src/bin.rs"
